--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,11 +5,28 @@
     <h1>Sign up</h1>
 
     <%= form_for(@user) do |f| %>
-      <%= f.text_field :first_name, :placeholder => "First name" %> <br>
-      <%= f.text_field :last_name, :placeholder => "Last name" %> <br>
-      <%= f.email_field :email, :placeholder => "Email" %> <br>
-      <%= f.password_field :password, :placeholder => "Password" %> 
-      <%= f.submit "Create an account", class: "btn-submit" %>
+
+        <div class="form-group">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :email%>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+
+      <%= f.submit "Create an account", class: "btn btn-primary" %>
     <% end %>
 
   
